@@ -7,8 +7,8 @@ import time
 from asm3.locales import *
 
 
-VERSION = "47u [Wed 24 May 11:21:09 BST 2023]"
-BUILD = "05241121"
+VERSION = "47u [Wed 24 May 13:23:58 BST 2023]"
+BUILD = "05241323"
 
 DMY = ( "%d/%m/%Y", "%d/%m/%y" )
 HDMY = ( "%d-%m-%Y", "%d-%m-%y" )
